# stdoutools

./: LICENSE.txt  README.md  pyproject.toml  setup.cfg
stdoutools/: __init__.py
