[metadata]
name = stdoutools
version = 0.1.0
description = Tools for the python system output, or stdout.
long_description_content_type = text/markdown
author = Juno
author_email = junowu125@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.13
